--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,7 +51,6 @@
 
               <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li class="active"><a href="index.html"><span>Home</span></a></li>
-                <li><a href="blog.html"><span>Blog</span></a></li>
                 <li><a href="upload.html"><span>Upload Recipe</span></a></li>
                 <li><a href="profile.html"><span>Profile</span></a></li>
                 <li><a href="LogOut.html"><span>LogOut</span></a></li>
@@ -150,9 +149,8 @@
               </div>
               <div class="listing-item-content">
                 <a href="#" class="bookmark" data-toggle="tooltip" data-placement="left" title="Bookmark"><span class="icon-heart"></span></a>
-                <a class="px-3 mb-3 category" href="#">Stores</a>
-                <h2 class="mb-1"><a href="#">Sticky Band</a></h2>
-                <span class="address">West Orange, New York</span>
+                <h3 class="px-3 mb-3 category">Events</h3>
+                <h2 class="mb-1"><a href="item.html">Sticky Band</a></h2>
               </div>
             </div>
 
@@ -165,9 +163,8 @@
               </div>
               <div class="listing-item-content">
                 <a href="#" class="bookmark"><span class="icon-heart"></span></a>
-                <a class="px-3 mb-3 category" href="#">Restaurants</a>
-                <h2 class="mb-1"><a href="#">Sticky Band</a></h2>
-                <span class="address">West Orange, New York</span>
+                <h3 class="px-3 mb-3 category">Events</h3>
+                <h2 class="mb-1"><a href="item.html">Sticky Band</a></h2>
               </div>
             </div>
 
@@ -180,9 +177,8 @@
               </div>
               <div class="listing-item-content">
                 <a href="#" class="bookmark"><span class="icon-heart"></span></a>
-                <a class="px-3 mb-3 category" href="#">Events</a>
-                <h2 class="mb-1"><a href="#">Sticky Band</a></h2>
-                <span class="address">West Orange, New York</span>
+                <h3 class="px-3 mb-3 category">Events</h3>
+                <h2 class="mb-1"><a href="item.html">Sticky Band</a></h2>
               </div>
             </div>
           </div>
@@ -195,9 +191,8 @@
               </div>
               <div class="listing-item-content">
                 <a href="#" class="bookmark" data-toggle="tooltip" data-placement="left" title="Bookmark"><span class="icon-heart"></span></a>
-                <a class="px-3 mb-3 category" href="#">Stores</a>
-                <h2 class="mb-1"><a href="#">Sticky Band</a></h2>
-                <span class="address">West Orange, New York</span>
+                <h3 class="px-3 mb-3 category">Events</h3>
+                <h2 class="mb-1"><a href="item.html">Sticky Band</a></h2>
               </div>
             </div>
           </div>
@@ -210,9 +205,8 @@
               </div>
               <div class="listing-item-content">
                 <a href="#" class="bookmark"><span class="icon-heart"></span></a>
-                <a class="px-3 mb-3 category" href="#">Restaurants</a>
-                <h2 class="mb-1"><a href="#">Sticky Band</a></h2>
-                <span class="address">West Orange, New York</span>
+                <h3 class="px-3 mb-3 category">Events</h3>
+                <h2 class="mb-1"><a href="item.html">Sticky Band</a></h2>
               </div>
             </div>
 
@@ -225,9 +219,8 @@
               </div>
               <div class="listing-item-content">
                 <a href="#" class="bookmark"><span class="icon-heart"></span></a>
-                <a class="px-3 mb-3 category" href="#">Events</a>
-                <h2 class="mb-1"><a href="#">Sticky Band</a></h2>
-                <span class="address">West Orange, New York</span>
+                <h3 class="px-3 mb-3 category">Events</h3>
+                <h2 class="mb-1"><a href="item.html">Sticky Band</a></h2>
               </div>
             </div>
           </div>
