--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
 
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/rangeslider.css">
     <link rel="stylesheet" href="css/main.css">
@@ -26,7 +26,148 @@
     
   </head>
   <body>
-  
+    <div class="c">
+    <button onclick="upload()">CLOSE</button>
+    <div class="RatingBox">
+    <div class="RatingBoxTitle">
+      <h2 style="font-size: 160%; font-family: Comic Sans MS; margin-top: 10px;">New to Where4Fun?</h2>
+      <p style="font-size: 150%">Please tell us your interests...</p>
+    </div>
+    <div class="RatingGrid" style="width: 100%;height: 68%;background: #fff;overflow-y: scroll;">
+      <div class="RatingItem">
+        <div class="RatingPic" style="background-image: url(https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=1593592833,2529249729&fm=15&gp=0.jpg);"></div>
+        <div class="RatingName"><h2 style="font-size: 100%;font-family: Comic Sans MS;">Gym</h2></div>
+        <div class="RatingStars">
+          <ul id="Star1">
+            <li class="light" style=""><a href="javascript:;">1</a></li>
+            <li><a href="javascript:;">2</a></li>
+            <li><a href="javascript:;">3</a></li>
+            <li><a href="javascript:;">4</a></li>
+            <li><a href="javascript:;">5</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="RatingItem">
+        <div class="RatingPic" style="background-image: url(https://ss2.bdstatic.com/70cFvnSh_Q1YnxGkpoWK1HF6hhy/it/u=3363761964,1952854212&fm=15&gp=0.jpg);"></div>
+        <div class="RatingName"><h2 style="font-size: 100%;font-family: Comic Sans MS;">Ulta Beauty</h2></div>
+        <div class="RatingStars">
+          <ul id="Star2">
+            <li class="light" style=""><a href="javascript:;">1</a></li>
+            <li><a href="javascript:;">2</a></li>
+            <li><a href="javascript:;">3</a></li>
+            <li><a href="javascript:;">4</a></li>
+            <li><a href="javascript:;">5</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="RatingItem">
+        <div class="RatingPic" style="background-image: url(https://ss1.bdstatic.com/70cFuXSh_Q1YnxGkpoWK1HF6hhy/it/u=554121802,2253374887&fm=15&gp=0.jpg);"></div>
+        <div class="RatingName"><h2 style="font-size: 100%;font-family: Comic Sans MS;">Steak 'n Shake</h2></div>
+        <div class="RatingStars">
+          <ul id="Star3">
+            <li class="light" style=""><a href="javascript:;">1</a></li>
+            <li><a href="javascript:;">2</a></li>
+            <li><a href="javascript:;">3</a></li>
+            <li><a href="javascript:;">4</a></li>
+            <li><a href="javascript:;">5</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="RatingItem">
+        <div class="RatingPic" style="background-image: url(https://ss2.bdstatic.com/70cFvnSh_Q1YnxGkpoWK1HF6hhy/it/u=4187945479,3913729253&fm=15&gp=0.jpg);"></div>
+        <div class="RatingName"><h2 style="font-size: 100%;font-family: Comic Sans MS;">GameStop</h2></div>
+        <div class="RatingStars">
+          <ul id="Star4">
+            <li class="light" style=""><a href="javascript:;">1</a></li>
+            <li><a href="javascript:;">2</a></li>
+            <li><a href="javascript:;">3</a></li>
+            <li><a href="javascript:;">4</a></li>
+            <li><a href="javascript:;">5</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="RatingItem">
+        <div class="RatingPic" style="background-image: url(https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=1057046913,2381821689&fm=15&gp=0.jpg);"></div>
+        <div class="RatingName"><h2 style="font-size: 100%;font-family: Comic Sans MS;">Shopping Mall</h2></div>
+        <div class="RatingStars">
+          <ul id="Star5">
+            <li class="light" style=""><a href="javascript:;">1</a></li>
+            <li><a href="javascript:;">2</a></li>
+            <li><a href="javascript:;">3</a></li>
+            <li><a href="javascript:;">4</a></li>
+            <li><a href="javascript:;">5</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="RatingItem">
+        <div class="RatingPic" style="background-image: url(https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=2461079983,690739524&fm=15&gp=0.jpg);"></div>
+        <div class="RatingName"><h2 style="font-size: 100%;font-family: Comic Sans MS;"> Luxury Nails Bar </h2></div>
+        <div class="RatingStars">
+          <ul id="Star6">
+            <li class="light" style=""><a href="javascript:;">1</a></li>
+            <li><a href="javascript:;">2</a></li>
+            <li><a href="javascript:;">3</a></li>
+            <li><a href="javascript:;">4</a></li>
+            <li><a href="javascript:;">5</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="RatingItem">
+        <div class="RatingPic" style="background-image: url(https://ss0.bdstatic.com/70cFuHSh_Q1YnxGkpoWK1HF6hhy/it/u=3250900987,1160107705&fm=15&gp=0.jpg);"></div>
+        <div class="RatingName"><h2 style="font-size: 100%;font-family: Comic Sans MS;">Creative Cooking School</h2></div>
+        <div class="RatingStars">
+          <ul id="Star7">
+            <li class="light" style=""><a href="javascript:;">1</a></li>
+            <li><a href="javascript:;">2</a></li>
+            <li><a href="javascript:;">3</a></li>
+            <li><a href="javascript:;">4</a></li>
+            <li><a href="javascript:;">5</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="RatingItem">
+        <div class="RatingPic" style="background-image: url(https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=3594668216,1215299661&fm=15&gp=0.jpg);"></div>
+        <div class="RatingName"><h2 style="font-size: 100%;font-family: Comic Sans MS;">Inizio Salon</h2></div>
+        <div class="RatingStars">
+          <ul id="Star8">
+            <li class="light" style=""><a href="javascript:;">1</a></li>
+            <li><a href="javascript:;">2</a></li>
+            <li><a href="javascript:;">3</a></li>
+            <li><a href="javascript:;">4</a></li>
+            <li><a href="javascript:;">5</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="RatingItem">
+        <div class="RatingPic" style="background-image: url(https://ss3.bdstatic.com/70cFv8Sh_Q1YnxGkpoWK1HF6hhy/it/u=3106992300,1546390831&fm=15&gp=0.jpg);"></div>
+        <div class="RatingName"><h2 style="font-size: 100%;font-family: Comic Sans MS;">Message</h2></div>
+        <div class="RatingStars">
+          <ul id="Star9">
+            <li class="light" style=""><a href="javascript:;">1</a></li>
+            <li><a href="javascript:;">2</a></li>
+            <li><a href="javascript:;">3</a></li>
+            <li><a href="javascript:;">4</a></li>
+            <li><a href="javascript:;">5</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="RatingItem">
+        <div class="RatingPic" style="background-image: url(https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=3385116332,2390887328&fm=15&gp=0.jpg);"></div>
+        <div class="RatingName"><h2 style="font-size: 100%;font-family: Comic Sans MS;">Starbucks</h2></div>
+        <div class="RatingStars">
+          <ul id="Star10">
+            <li class="light" style=""><a href="javascript:;">1</a></li>
+            <li><a href="javascript:;">2</a></li>
+            <li><a href="javascript:;">3</a></li>
+            <li><a href="javascript:;">4</a></li>
+            <li><a href="javascript:;">5</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="RatingBoxFooter">
+      <button id="continueBtn" onclick="upload()"class="ContinueButton" disabled="true">CONTINUE</button>
+    </div></div></div>
   <div class="site-wrap">
 
     <div class="site-mobile-menu">
@@ -105,9 +246,11 @@
                       </select>
                     </div>
                   </div>
-                  <div class="col-lg-12 col-xl-2 ml-auto text-right">
-                    <a href="search.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Search</a>
+                  <div class="col-lg-12 col-xl-2 ml-auto text-left">
+                    <button class="btn btn-primary btn-lg" type="submit" onclick="return goToSample()"><i class="fa fa-search"></i></button>
+                    <a href="search.html" class="btn btn-primary btn-lg" type="submit" onclick="searchPhotofromfile()"><i class="fa fa-camera"></i></a>
                   </div>
+
                 </div>
 
                 <div class="bs-example">
@@ -119,6 +262,7 @@
                           <input type="radio" name="options" value="search_type" class="option_gender" > Search using file
                       </label>
                     </div>
+
                   </div>
               </form>
             </div>
@@ -228,7 +372,7 @@
       </div>
     </div>
   </div>
-
+  <div id = "showProgress"></div>
 
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
@@ -280,6 +424,14 @@
     para.innerHTML = add_type;
     document.getElementById("search_content").appendChild(para);
   });
+
+  var __waitHTML = '<div style="padding: 20px;"><img src="images/91.gif" /><span style="font-weight: bold;padding-left: 10px; color: #FF66CC;">Waiting......</span></div>';
+ 
+  function goToSample() {
+      $('#showProgress').html(__waitHTML);
+          window.location.href = "search.html";
+          return false;
+      }
   </script>
   </body>
 </html>
