--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,148 +26,6 @@
     
   </head>
   <body>
-    <div class="c">
-    <button onclick="upload()">CLOSE</button>
-    <div class="RatingBox">
-    <div class="RatingBoxTitle">
-      <h2 style="font-size: 160%; font-family: Comic Sans MS; margin-top: 10px;">New to Where4Fun?</h2>
-      <p style="font-size: 150%">Please tell us your interests...</p>
-    </div>
-    <div class="RatingGrid" style="width: 100%;height: 68%;background: #fff;overflow-y: scroll;">
-      <div class="RatingItem">
-        <div class="RatingPic" style="background-image: url(https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=1593592833,2529249729&fm=15&gp=0.jpg);"></div>
-        <div class="RatingName"><h2 style="font-size: 100%;font-family: Comic Sans MS;">Gym</h2></div>
-        <div class="RatingStars">
-          <ul id="Star1">
-            <li class="light" style=""><a href="javascript:;">1</a></li>
-            <li><a href="javascript:;">2</a></li>
-            <li><a href="javascript:;">3</a></li>
-            <li><a href="javascript:;">4</a></li>
-            <li><a href="javascript:;">5</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="RatingItem">
-        <div class="RatingPic" style="background-image: url(https://ss2.bdstatic.com/70cFvnSh_Q1YnxGkpoWK1HF6hhy/it/u=3363761964,1952854212&fm=15&gp=0.jpg);"></div>
-        <div class="RatingName"><h2 style="font-size: 100%;font-family: Comic Sans MS;">Ulta Beauty</h2></div>
-        <div class="RatingStars">
-          <ul id="Star2">
-            <li class="light" style=""><a href="javascript:;">1</a></li>
-            <li><a href="javascript:;">2</a></li>
-            <li><a href="javascript:;">3</a></li>
-            <li><a href="javascript:;">4</a></li>
-            <li><a href="javascript:;">5</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="RatingItem">
-        <div class="RatingPic" style="background-image: url(https://ss1.bdstatic.com/70cFuXSh_Q1YnxGkpoWK1HF6hhy/it/u=554121802,2253374887&fm=15&gp=0.jpg);"></div>
-        <div class="RatingName"><h2 style="font-size: 100%;font-family: Comic Sans MS;">Steak 'n Shake</h2></div>
-        <div class="RatingStars">
-          <ul id="Star3">
-            <li class="light" style=""><a href="javascript:;">1</a></li>
-            <li><a href="javascript:;">2</a></li>
-            <li><a href="javascript:;">3</a></li>
-            <li><a href="javascript:;">4</a></li>
-            <li><a href="javascript:;">5</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="RatingItem">
-        <div class="RatingPic" style="background-image: url(https://ss2.bdstatic.com/70cFvnSh_Q1YnxGkpoWK1HF6hhy/it/u=4187945479,3913729253&fm=15&gp=0.jpg);"></div>
-        <div class="RatingName"><h2 style="font-size: 100%;font-family: Comic Sans MS;">GameStop</h2></div>
-        <div class="RatingStars">
-          <ul id="Star4">
-            <li class="light" style=""><a href="javascript:;">1</a></li>
-            <li><a href="javascript:;">2</a></li>
-            <li><a href="javascript:;">3</a></li>
-            <li><a href="javascript:;">4</a></li>
-            <li><a href="javascript:;">5</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="RatingItem">
-        <div class="RatingPic" style="background-image: url(https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=1057046913,2381821689&fm=15&gp=0.jpg);"></div>
-        <div class="RatingName"><h2 style="font-size: 100%;font-family: Comic Sans MS;">Shopping Mall</h2></div>
-        <div class="RatingStars">
-          <ul id="Star5">
-            <li class="light" style=""><a href="javascript:;">1</a></li>
-            <li><a href="javascript:;">2</a></li>
-            <li><a href="javascript:;">3</a></li>
-            <li><a href="javascript:;">4</a></li>
-            <li><a href="javascript:;">5</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="RatingItem">
-        <div class="RatingPic" style="background-image: url(https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=2461079983,690739524&fm=15&gp=0.jpg);"></div>
-        <div class="RatingName"><h2 style="font-size: 100%;font-family: Comic Sans MS;"> Luxury Nails Bar </h2></div>
-        <div class="RatingStars">
-          <ul id="Star6">
-            <li class="light" style=""><a href="javascript:;">1</a></li>
-            <li><a href="javascript:;">2</a></li>
-            <li><a href="javascript:;">3</a></li>
-            <li><a href="javascript:;">4</a></li>
-            <li><a href="javascript:;">5</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="RatingItem">
-        <div class="RatingPic" style="background-image: url(https://ss0.bdstatic.com/70cFuHSh_Q1YnxGkpoWK1HF6hhy/it/u=3250900987,1160107705&fm=15&gp=0.jpg);"></div>
-        <div class="RatingName"><h2 style="font-size: 100%;font-family: Comic Sans MS;">Creative Cooking School</h2></div>
-        <div class="RatingStars">
-          <ul id="Star7">
-            <li class="light" style=""><a href="javascript:;">1</a></li>
-            <li><a href="javascript:;">2</a></li>
-            <li><a href="javascript:;">3</a></li>
-            <li><a href="javascript:;">4</a></li>
-            <li><a href="javascript:;">5</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="RatingItem">
-        <div class="RatingPic" style="background-image: url(https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=3594668216,1215299661&fm=15&gp=0.jpg);"></div>
-        <div class="RatingName"><h2 style="font-size: 100%;font-family: Comic Sans MS;">Inizio Salon</h2></div>
-        <div class="RatingStars">
-          <ul id="Star8">
-            <li class="light" style=""><a href="javascript:;">1</a></li>
-            <li><a href="javascript:;">2</a></li>
-            <li><a href="javascript:;">3</a></li>
-            <li><a href="javascript:;">4</a></li>
-            <li><a href="javascript:;">5</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="RatingItem">
-        <div class="RatingPic" style="background-image: url(https://ss3.bdstatic.com/70cFv8Sh_Q1YnxGkpoWK1HF6hhy/it/u=3106992300,1546390831&fm=15&gp=0.jpg);"></div>
-        <div class="RatingName"><h2 style="font-size: 100%;font-family: Comic Sans MS;">Message</h2></div>
-        <div class="RatingStars">
-          <ul id="Star9">
-            <li class="light" style=""><a href="javascript:;">1</a></li>
-            <li><a href="javascript:;">2</a></li>
-            <li><a href="javascript:;">3</a></li>
-            <li><a href="javascript:;">4</a></li>
-            <li><a href="javascript:;">5</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="RatingItem">
-        <div class="RatingPic" style="background-image: url(https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=3385116332,2390887328&fm=15&gp=0.jpg);"></div>
-        <div class="RatingName"><h2 style="font-size: 100%;font-family: Comic Sans MS;">Starbucks</h2></div>
-        <div class="RatingStars">
-          <ul id="Star10">
-            <li class="light" style=""><a href="javascript:;">1</a></li>
-            <li><a href="javascript:;">2</a></li>
-            <li><a href="javascript:;">3</a></li>
-            <li><a href="javascript:;">4</a></li>
-            <li><a href="javascript:;">5</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="RatingBoxFooter">
-      <button id="continueBtn" onclick="upload()"class="ContinueButton" disabled="true">CONTINUE</button>
-    </div></div></div>
   <div class="site-wrap">
 
     <div class="site-mobile-menu">
@@ -233,7 +91,7 @@
                   </div>
                   
                   <div class="col-lg-12 col-xl-3">
-                    <div class="select-wrap">
+                    <div class="select-wrap" id = "searching" style="display: ">
                       <span class="icon"><span class="icon-keyboard_arrow_down"></span></span>
                       <select class="form-control" name="" id="">
                         <option value="">All Categories</option>
@@ -406,12 +264,20 @@
   <script>
   $("#selector :input").change(function() {
     var search_type = document.querySelector('.option_gender:checked').value;
+    if(search_type != "search_text")
+    {
+　　  document.getElementById("searching").style.display="none";//隐藏
+    }
+    else{
+　　    document.getElementById("searching").style.display="";//显
+    }
+
     var remove_type = (search_type=="search_text")?"search_file":"search_text";
     var add_type = (search_type=="search_text")?"search_text":"search_file";
     if (search_type=="search_text") {
-      add_type = "<input type='text' id = 'search_text' class='form-control' placeholder='What are you looking for?'>";
+      add_type1 = "<input type='text' id = 'search_text' class='form-control' placeholder='What are you looking for?'>";
     } else {
-      add_type = "<input type='file' class='form-control upload' name='search' id='search_file'>";
+      add_type1 = "<input type='file' class='form-control upload' name='search' id='search_file'>";
     }
     try {
       var element = document.getElementById(remove_type);
@@ -420,9 +286,11 @@
       alert(e)
     }
 
-    var para = document.createElement("div");
-    para.innerHTML = add_type;
-    document.getElementById("search_content").appendChild(para);
+    var para1 = document.createElement("div");
+    para1.innerHTML = add_type1;
+    var para2 = document.createElement("div");
+    para2.innerHTML = add_type2;
+    document.getElementById("search_content").appendChild(para1);
   });
 
   var __waitHTML = '<div style="padding: 20px;"><img src="images/91.gif" /><span style="font-weight: bold;padding-left: 10px; color: #FF66CC;">Waiting......</span></div>';
